force-app/main/default/objects/DRC_NBC_API_Log__c/DRC_NBC_API_Log__c.object-meta.xml
<CustomObject>
    <label>API Log</label>
    <nameField>
        <displayFormat>API-Log-{0000}</displayFormat>
        <label>API Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>API Logs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>