force-app/main/default/objects/DRC_NBC_API_Log__c/fields/DRC_NBC_Created_Updated_SF_Id__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Created_Updated_SF_Id__c</fullName>
    <label>Created/Updated SF Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>