force-app/main/default/objects/DRC_NBC_API_Log__c/fields/DRC_NBC_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Endpoint__c</fullName>
    <label>Endpoint</label>
    <type>Url</type>
</CustomField>