force-app/main/default/objects/DRC_NBC_API_Log__c/fields/DRC_NBC_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Error_Message__c</fullName>
    <label>Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>