force-app/main/default/objects/DRC_NBC_API_Log__c/fields/DRC_NBC_Log_Type__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Log_Type__c</fullName>
    <label>Log Type</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>