force-app/main/default/objects/DRC_NBC_API_Log__c/fields/DRC_NBC_Method_Name__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Method_Name__c</fullName>
    <label>Method Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>