force-app/main/default/objects/DRC_NBC_API_Log__c/fields/DRC_NBC_Response_Body__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Response_Body__c</fullName>
    <label>Response Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>