force-app/main/default/objects/DRC_NBC_API_Log__c/fields/DRC_NBC_Stack_Trace__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Stack_Trace__c</fullName>
    <label>Stack Trace</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>