force-app/main/default/objects/DRC_NBC_API_Log__c/fields/DRC_NBC_Status_Code__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Status_Code__c</fullName>
    <label>Status Code</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>