force-app/main/default/objects/DRC_NBC_API_Log__c/fields/DRC_NBC_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Timestamp__c</fullName>
    <label>Timestamp</label>
    <type>DateTime</type>
</CustomField>