force-app/main/default/objects/DRC_NBC_API_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>DRC_NBC_Log_Type__c</columns>
    <columns>DRC_NBC_Status_Code__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>DRC_NBC_Endpoint__c</columns>
    <columns>DRC_NBC_Error_Message__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>